--- a/event-project3/src/app/event/event.component.html
+++ b/event-project3/src/app/event/event.component.html
@@ -1,4 +1,4 @@
-<p>event works!</p>
-<h1>http://localhost:4200/event</h1>
-<h2>do you understand????</h2>
-<h1>YES!!!!!!!</h1>
+you can continue
+i saved
+
+so how can i UPDATE IF I WRITE SOME NEW CODE?
